--- a/README
+++ b/README
@@ -1,1 +1,26 @@
+TODO:
+    + domain package CDI via weld not working (except with execution of <mainClass>org.jboss.weld.environment.se.StartMain</mainClass>
+
 This file was created by IntelliJ IDEA (Cardea) IU-130.962 for binding GitHub repository
+
+
+        <!--- Logging API -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <!--  Intercepts Commons Logging and routes it through SLF4J (to Log4J) -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <!-- Routes the actual logging to Log4J -->
+        <dependency>
+            <groupId>org.apache.logging.log4j.adapters</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>2.0-beta4</version>
+        </dependency>
